fix: text alignment for message.php

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ body {
     background-color: #3C3A3A;
 }
 
-.message .short-text {
+.message .short-text, .message-content p:last-of-type {
     text-align: justify;
     text-justify: inter-word;
 }
